--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -82,7 +82,7 @@
     <div class="row">
         <div class=" col-md-6">
                     <div class="modal-header">
-                    <h4 class="modal-title">Welcome Username</h4>
+                    <h4 class="modal-title" th:text="Welcome ${currentUser.email}"></h4>
                 </div>
                 <div class="modal-body">
                     <div>
@@ -121,7 +121,7 @@
 </div>
 </body>
 <script th:src="@{/webjars/stomp-websocket/2.3.4/stomp.js}" type="text/javascript"></script>
-<script th:src="@{http://localhost:8080/js/email.js}">
+<script th:src="@{/js/email.js}">
 </script>
 <script>
     let user = document.querySelector('.userId').value
