--- a/src/main/resources/templates/messages.html
+++ b/src/main/resources/templates/messages.html
@@ -82,7 +82,7 @@
     <div class="row">
         <div class=" col-md-6">
                     <div class="modal-header">
-                    <h4 class="modal-title" th:text="Welcome ${currentUser.email}"></h4>
+                    <h4 class="modal-title">Welcome</h4>
                 </div>
                 <div class="modal-body">
                     <div>
